; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_connect.c_ECPGsetconn.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_connect.c_ECPGsetconn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }

@actual_connection = common dso_local global %struct.connection* null, align 8
@actual_connection_key = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ECPGsetconn(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.connection*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call %struct.connection* @ecpg_get_connection(i8* %7)
  store %struct.connection* %8, %struct.connection** %6, align 8
  %9 = load %struct.connection*, %struct.connection** %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @ecpg_init(%struct.connection* %9, i8* %10, i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %17

15:                                               ; preds = %2
  %16 = load %struct.connection*, %struct.connection** %6, align 8
  store %struct.connection* %16, %struct.connection** @actual_connection, align 8
  store i32 1, i32* %3, align 4
  br label %17

17:                                               ; preds = %15, %14
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local %struct.connection* @ecpg_get_connection(i8*) #1

declare dso_local i32 @ecpg_init(%struct.connection*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
